--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/src/CSS/estilos.css">
-    <link rel="stylesheet" href="/src/CSS/reset.css">
-    <link rel="stylesheet" href="/src/CSS/responsivo.css">
+    <link rel="stylesheet" href="./src/CSS/estilos.css">
+    <link rel="stylesheet" href="./src/CSS/reset.css">
+    <link rel="stylesheet" href="./src/CSS/responsivo.css">
   </head>
   <body>
     <header class="cabecalho">
@@ -60,7 +60,7 @@
         </div>
         <div class="container-foto">
             <div class=" foto sombra-interna">
-                <img src="/src/imagens/foto-perfil.png" alt="Foto portifólio Lucas" width="300" height="300">
+                <img src="./src/imagens/foto-perfil.png" alt="Foto portifólio Lucas" width="300" height="300">
             </div>
         </div>
     </section>
@@ -69,7 +69,7 @@
         <div class="container-projetos">
             <div class="projeto ativo">
                 <a href="" target="_blank">
-                    <img src="/src/imagens/515x700.png" alt="Meu projeto">
+                    <img src="./src/imagens/515x700.png" alt="Meu projeto">
                     <h3>Projeto 1</h3>
                     <div class="informacoes-projeto">
                         <p>Projeto feito usando HTML, CSS e JavaScript</p>
@@ -150,6 +150,6 @@
         </div>
         <button class="btn-mostrar-projetos" class="remover">Mostrar Mais</button>
     </section>
-    <script src="/src/JS/index.js"></script>
+    <script src="./src/JS/index.js"></script>
   </body>
 </html>
