--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
         <div class="projeto ativo">
             <a href="#" target="_blank">
-              <img src="/src/imagens/515x700.png" alt="Projeto" />
+              <img src="./src/imagens/515x700.png" alt="Projeto" />
               <h3>Projeto 2</h3>
               <div class="informacoes-projeto">
                 <p>Projeto feito usando HTML, CSS e JavaScript</p>
@@ -89,7 +89,7 @@
           </div>
           <div class="projeto ativo">
             <a href="#" target="_blank">
-              <img src="/src/imagens/515x700.png" alt="Projeto " />
+              <img src="./src/imagens/515x700.png" alt="Projeto " />
               <h3>Projeto 3</h3>
               <div class="informacoes-projeto">
                 <p>Projeto feito usando HTML, CSS e JavaScript</p>
@@ -99,7 +99,7 @@
           </div>
           <div class="projeto ativo">
             <a href="#" target="_blank">
-              <img src="/src/imagens/515x700.png" alt="Projeto" />
+              <img src="./src/imagens/515x700.png" alt="Projeto" />
               <h3>Projeto 4</h3>
               <div class="informacoes-projeto">
                 <p>Projeto feito usando HTML, CSS e JavaScript</p>
@@ -109,7 +109,7 @@
           </div>
           <div class="projeto">
             <a href="#" target="_blank">
-              <img src="/src/imagens/515x700.png" alt="Projeto" />
+              <img src="./src/imagens/515x700.png" alt="Projeto" />
               <h3>Projeto 5</h3>
               <div class="informacoes-projeto">
                 <p>Projeto feito usando HTML, CSS e JavaScript</p>
@@ -119,7 +119,7 @@
           </div>
           <div class="projeto">
             <a href="#" target="_blank">
-              <img src="/src/imagens/515x700.png" alt="Projeto " />
+              <img src="./src/imagens/515x700.png" alt="Projeto " />
               <h3>Projeto 6</h3>
               <div class="informacoes-projeto">
                 <p>Projeto feito usando HTML, CSS e JavaScript</p>
@@ -129,7 +129,7 @@
           </div>
           <div class="projeto">
             <a href="#" target="_blank">
-              <img src="/src/imagens/515x700.png" alt="Projeto " />
+              <img src="./src/imagens/515x700.png" alt="Projeto " />
               <h3>Projeto 7</h3>
               <div class="informacoes-projeto">
                 <p>Projeto feito usando HTML, CSS e JavaScript</p>
@@ -139,7 +139,7 @@
           </div>
           <div class="projeto">
             <a href="#" target="_blank">
-              <img src="/src/imagens/515x700.png" alt="Projeto" />
+              <img src="./src/imagens/515x700.png" alt="Projeto" />
               <h3>Projeto 8</h3>
               <div class="informacoes-projeto">
                 <p>Projeto feito usando HTML, CSS e JavaScript</p>
