--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://wa.me/+5511966378904" title="Whatsapp" target="_blank">
+                    <a href="https://wa.me/+551191111-1111" title="Whatsapp" target="_blank">
                         <i class="fab fa-whatsapp"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="https://github.com/nomedousuario" title="Github" target="_blank">
+                    <a href="https://github.com/MortheyVlad" title="Github" target="_blank">
                         <i class="fab fa-github"></i>
                     </a>
                 </li>
