--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
             <p>Ah, também sou fã de jogos, filmes, séries e animes. 💜</p>
             <ul class="redes-sociais">
                 <li>
-                    <a href="linkedin" title="Linkedin" target="_blank">
+                    <a href="https://www.linkedin.com/in/lucas-oliveira-41404a176" title="Linkedin" target="_blank">
                         <i class="fab fa-linkedin"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="https://wa.me/+551191111-1111" title="Whatsapp" target="_blank">
+                    <a href="https://wa.me/+5511966378904" title="Whatsapp" target="_blank">
                         <i class="fab fa-whatsapp"></i>
                     </a>
                 </li>
@@ -60,7 +60,8 @@
         </div>
         <div class="container-foto">
             <div class=" foto sombra-interna">
-                <img src="./src/imagens/foto-perfil.png" alt="Foto portifólio Lucas" width="300" height="300">
+                <img src="./src/imagens/Imagem_do_WhatsApp_de_2024-05-30_à_s__13.37.43_4ad00de6-removebg-preview.png" alt="Foto portifólio Lucas" 
+                width="450" height="450">
             </div>
         </div>
     </section>
@@ -68,9 +69,9 @@
         <h2 class="titulo">Meus Projetos</h2>
         <div class="container-projetos">
             <div class="projeto ativo">
-                <a href="" target="_blank">
-                    <img src="./src/imagens/515x700.png" alt="Meu projeto">
-                    <h3>Projeto 1</h3>
+                <a href="https://mortheyvlad.github.io/LoS-RPG/Index.html" target="_blank">
+                    <img src="./src/imagens/logo1.png" alt="Meu projeto">
+                    <h3>Lords of Shadows - RPG</h3>
                     <div class="informacoes-projeto">
                         <p>Projeto feito usando HTML, CSS e JavaScript</p>
                         <p>🔗 Ver no Github Pages</p>
