--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="projeto ativo">
                 <a href="https://mortheyvlad.github.io/LoS-RPG/Index.html" target="_blank">
                     <img src="./src/imagens/logo1.png" alt="Meu projeto">
-                    <h3>Lords of Shadows - RPG</h3>
+                    <h3>Lords of Shadows - RPG - Landing Page</h3>
                     <div class="informacoes-projeto">
                         <p>Projeto feito usando HTML, CSS e JavaScript</p>
                         <p>🔗 Ver no Github Pages</p>
